--- a/app/src/app/product-list/product-list.component.html
+++ b/app/src/app/product-list/product-list.component.html
@@ -30,9 +30,8 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fas fa-shopping-cart"></i>
-            <span class="badge badge-pill badge-danger" *ngIf="cartItems.length > 0">{{cartItems.length}}</span>
+          <a class="nav-link" routerLink="/basket">
+                <span class="badge badge-primary text-bg-danger" *ngIf="cartItems.length > 0">{{cartItems.length}}</span>
           </a>
         </li>
       </ul>
